updated the UI with string spilts and matching data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="_5_2">5.2</string>
     <string name="nigeria">Nigeria</string>
     <string name="_20th_march">20th March</string>
+    <string name="near_the">Near the</string>
 </resources>
