updated the UI formar and adapter to view as specified in the screenshot

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
     <string name="app_name">EarthQuakes</string>
     <string name="_5_2">5.2</string>
     <string name="nigeria">Nigeria</string>
-    <string name="_20th_march">20th March</string>
+    <string name="_20th_march">March 6, 2010</string>
     <string name="near_the">Near the</string>
 </resources>
